# daoheart

./: Cargo.toml
buffer/: Cargo.toml
buffer/src/: buffer.rs
editor_component/: Cargo.toml
editor_component/src/: lib.rs  view.rs  widget.rs
editor_component/src/widget/: draw_widget.rs
editor_widget/: Cargo.toml
editor_widget/src/: internal_state.rs  lib.rs  message.rs  render_text_buffer.rs  state.rs
editor_widget/src/paragraph_cache/: mod.rs  paragraph_bounds_cache.rs
global/: Cargo.toml
global/src/: lib.rs
main/: Cargo.toml
src/: constants.rs  main.rs
window/: Cargo.toml
window/src/: lib.rs
