[package]
name = "daoheart" # the name of the package
version = "0.0.1"    # the current version, obeying semver
edition = "2024"

[workspace]
resolver = "3"
members = [
    "buffer", "editor_widget", "global", "io",
]

[workspace.dependencies]
iced = { version = "0.14.0", flags = "advanced" }
iced_core = "0.14.0"
cosmic-text = "0.15.0"

[dependencies]
iced = { workspace = true }
editor_widget = { path = "./editor_widget" }